--- a/brendacarpinteria/Facturas.xaml
+++ b/brendacarpinteria/Facturas.xaml
@@ -12,7 +12,7 @@
 
         <TextBox x:Name="txtapellidocliente" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="127,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txttelefonocliente" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="127,270,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtnombreempleado" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="195,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="243" TextChanged="Txtnombreempleado_TextChanged" FontFamily="Verdana"/>
+        <TextBox x:Name="txtnombreempleado" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="195,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="243" FontFamily="Verdana"/>
         <TextBox x:Name="txtprecioproducto" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="599,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="116"/>
         <TextBox x:Name="txtnombrecliente" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="127,214,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtnombreproducto" IsEnabled="False" HorizontalAlignment="Left" Height="23" Margin="599,112,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="116"/>
@@ -29,7 +29,7 @@
         <Label Content="Total De Factura" HorizontalAlignment="Left" Margin="203,510,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtidcliente" IsEnabled="False"  HorizontalAlignment="Left" Height="23" Margin="127,186,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Id Cliente" HorizontalAlignment="Left" Margin="60,183,0,0" VerticalAlignment="Top"/>
-        <WindowsFormsHost HorizontalAlignment="Left" Height="181" Margin="443,390,0,0" VerticalAlignment="Top" Width="517" ChildChanged="WindowsFormsHost_ChildChanged" GotFocus="WindowsFormsHost_GotFocus" LostFocus="WindowsFormsHost_LostFocus" GotMouseCapture="WindowsFormsHost_GotMouseCapture" >
+        <WindowsFormsHost HorizontalAlignment="Left" Height="181" Margin="443,390,0,0" VerticalAlignment="Top" Width="517" GotMouseCapture="WindowsFormsHost_GotMouseCapture" >
             <Forms:DataGridView x:Name="dgvCarrito" CellMouseClick="dgvCarrito_CellMouseClick"/>
 
         </WindowsFormsHost>
